{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 9,
  "lineage": "2ab9d357-7ad4-fd30-f2d6-55d60384ffee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:634747715945:instance/i-0cc5486bb90fcf392",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc5486bb90fcf392",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0429681f0ec8da7c2"
              }
            ],
            "primary_network_interface_id": "eni-0429681f0ec8da7c2",
            "private_dns": "ip-10-0-1-68.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.68",
            "public_ip": "13.206.187.122",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05393849dd6875e94",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd602754f8c9923d",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac711d74d8d39114"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "634747715945",
            "id": "i-0cc5486bb90fcf392",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:634747715945:internet-gateway/igw-061d71153ed475099",
            "id": "igw-061d71153ed475099",
            "owner_id": "634747715945",
            "region": "ap-south-1",
            "tags": {
              "Name": "main-gateway"
            },
            "tags_all": {
              "Name": "main-gateway"
            },
            "vpc_id": "vpc-01a7c3da599aa68f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "634747715945",
            "id": "igw-061d71153ed475099",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:634747715945:route-table/rtb-018d0c88665e54d1c",
            "id": "rtb-018d0c88665e54d1c",
            "owner_id": "634747715945",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061d71153ed475099",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a7c3da599aa68f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "634747715945",
            "id": "rtb-018d0c88665e54d1c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa12425564231cda",
            "region": "ap-south-1",
            "route_table_id": "rtb-018d0c88665e54d1c",
            "subnet_id": "subnet-0bd602754f8c9923d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "634747715945",
            "id": "rtbassoc-0aa12425564231cda",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:634747715945:security-group/sg-0ac711d74d8d39114",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac711d74d8d39114",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20260507165016274300000001",
            "name_prefix": "terraform-",
            "owner_id": "634747715945",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a7c3da599aa68f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "634747715945",
            "id": "sg-0ac711d74d8d39114",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:634747715945:subnet/subnet-0bd602754f8c9923d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd602754f8c9923d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634747715945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "main-subnet"
            },
            "tags_all": {
              "Name": "main-subnet"
            },
            "vpc_id": "vpc-01a7c3da599aa68f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "634747715945",
            "id": "subnet-0bd602754f8c9923d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:634747715945:vpc/vpc-01a7c3da599aa68f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb766f011795ce26",
            "default_route_table_id": "rtb-0ef52488125b5c516",
            "default_security_group_id": "sg-07510d6681db16962",
            "dhcp_options_id": "dopt-00190aa61c66731e8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a7c3da599aa68f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef52488125b5c516",
            "owner_id": "634747715945",
            "region": "ap-south-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "634747715945",
            "id": "vpc-01a7c3da599aa68f2",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}